<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.aledep10</groupId>
    <artifactId>NomadSync</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- JSON serialization -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.3</version>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.17.0</version>
            <scope>test</scope>
        </dependency>

        <!-- AssertJ -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.24.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Awaitility -->
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>4.2.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Produce a fat JAR with all dependencies included -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>io.aledep10.nomadsync.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>NomadSync</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources</directory>
                                    <includes>
                                        <!-- Automation & CLI CLI Wrappers (Windows) -->
                                        <include>NomadSync.bat</include>
                                        <include>NomadSyncCommit.bat</include>
                                        <include>NomadSyncConfig.bat</include>
                                        <include>NomadSyncPull.bat</include>
                                        <include>NomadSyncPush.bat</include>
                                        <include>NomadSyncStatus.bat</include>
                                        <include>NomadSyncSync.bat</include>
                                        <include>NomadSyncVault.bat</include>
                                        <include>NomadSyncVaultAdd.bat</include>
                                        <include>NomadSyncVaultCreate.bat</include>
                                        <include>NomadSyncVaultList.bat</include>
                                        <include>NomadSyncVaultRelocate.bat</include>
                                        <include>NomadSyncVaultRemove.bat</include>
                                        <include>NomadSyncVaultShow.bat</include>
                                        <include>NomadSyncVaultUpdate.bat</include>

                                        <!-- Automation & CLI CLI Wrappers (Linux/macOS) -->
                                        <!--include>NomadSync.sh</include>
                                        <include>NomadSyncCommit.sh</include>
                                        <include>NomadSyncConfig.sh</include>
                                        <include>NomadSyncPull.sh</include>
                                        <include>NomadSyncPush.sh</include>
                                        <include>NomadSyncStatus.sh</include>
                                        <include>NomadSyncSync.sh</include-->

                                        <!-- Environment Configuration Profiles -->
                                        <include>config.properties</include>
                                        <include>config.dev.properties</include>
                                        <include>config.prod.properties</include>
                                        <include>config.template.properties</include>

                                        <!-- Application Vault Registries -->
                                        <include>vaults.json</include>
                                        <include>vaults.template.json</include>
                                    </includes>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>create-log-directory</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <!-- Ensures target/logs exists for local IntelliJ execution contexts -->
                                <mkdir dir="${project.build.directory}/logs" />
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <workingDirectory>${java.io.tmpdir}/NomadSync_tests/_process-cwd</workingDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>